manifests/common-component/keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's http port.
  labels:
    application: keycloak
  name: keycloak
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    deploymentConfig: keycloak

---

apiVersion: route.openshift.io/v1
id: keycloak
kind: Route
metadata:
  annotations:
    description: Route for application's service.
  labels:
    application: keycloak
  name: keycloak
spec:
  host: ""
  tls:
    termination: edge
  to:
    name: keycloak

---

apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    application: keycloak
  name: keycloak
spec:
  replicas: 2
  selector:
    deploymentConfig: keycloak
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        application: keycloak
        deploymentConfig: keycloak
      name: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.1.1
        args:
        - start
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
